<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:paddingLeft="62dp"
            android:text="@string/main_setting"
            android:textColor="@color/grey_500" />

        <ProgressBar
            android:id="@+id/progressBarAccount"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_baseline_perm_identity_white_24"
            android:drawablePadding="@dimen/dimen_20dp"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:onClick="linearLayoutOnclick"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/your_username"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff" />

        <Button
            android:id="@+id/buttonEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_baseline_person_white_24"
            android:drawablePadding="@dimen/dimen_20dp"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:onClick="linearLayoutOnclick"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/your_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff" />


        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:fontFamily="sans-serif"
            android:paddingLeft="62dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/notification"
            android:textColor="#fff"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <LinearLayout
            android:id="@+id/linearLayoutAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:onClick="linearLayoutOnclick"
            android:paddingRight="@dimen/dimen_20dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/buttonAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_baseline_account_circle_white_24"
                android:drawablePadding="@dimen/dimen_20dp"
                android:fontFamily="sans-serif"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/dimen_20dp"
                android:paddingRight="@dimen/dimen_20dp"
                android:text="@string/account"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#fff" />

            <ImageView
                android:id="@+id/imageViewDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_baseline_dashboard_black_24"
                tools:ignore="VectorDrawableCompat" />


        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:paddingLeft="62dp"
            android:text="@string/privacy"
            android:textColor="@color/grey_500" />

        <Button
            android:id="@+id/buttonPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_baseline_assignment_privacy_white_24"
            android:drawablePadding="@dimen/dimen_20dp"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:onClick="linearLayoutOnclick"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/privacy_policy"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff" />

        <Button
            android:id="@+id/buttonTermsOfService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_baseline_description_terms_white_24"
            android:drawablePadding="@dimen/dimen_20dp"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:onClick="linearLayoutOnclick"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/terms_of_service"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff" />
        <View
            android:id="@+id/dividero"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:paddingLeft="62dp"
            android:text="@string/others"
            android:textColor="@color/grey_500" />

        <Button
            android:id="@+id/buttonRateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_baseline_grade_white_24"
            android:drawablePadding="@dimen/dimen_20dp"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:onClick="linearLayoutOnclick"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/rate_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff"
            android:textStyle="normal" />

        <Button
            android:id="@+id/buttonInviteFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_baseline_share_white_24"
            android:drawablePadding="@dimen/dimen_20dp"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:onClick="linearLayoutOnclick"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/invite_a_friend"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff" />

        <Button
            android:id="@+id/buttonOpenSourceLicence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_baseline_import_contacts_open_white_24"
            android:drawablePadding="@dimen/dimen_20dp"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:onClick="linearLayoutOnclick"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/open_source_licences"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff"
            android:textStyle="normal" />

        <Button
            android:id="@+id/buttonVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_baseline_info_version_white_24"
            android:drawablePadding="@dimen/dimen_20dp"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:onClick="linearLayoutOnclick"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/version"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff" />

        <View
            android:id="@+id/dividerop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:onClick="linearLayoutOnclick"
            android:text="@string/from_n_woezon_trade"
            android:textColor="#fff" />

    </LinearLayout>




</ScrollView>